HelloUltraviolet/Fixtures/RejectedSource/Expressions/EnumUnknownVariant/Expected.uv
//! Expected diagnostic metadata for the EnumUnknownVariant rejected-source specimen.

expectedDiagnostic("E-TYP-2007", "Enum-Lit-Unknown")
